--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,9 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.vs/slnx.sqlite
+.vs/VSWorkspaceState.json
+.vs/huudflix/v16/.suo
+.vs/huudflix/config/applicationhost.config
+.vs/ProjectSettings.json
+package-lock.json
